src/test/should_panic/vec_map_empty.rs
pub fn main() {
    linear_collections_macros::vec_map![];
}
